# geminiworkshop

./: .gitignore  1_getting_started.py  3_multimodality.py  5_embeddings.py  6_callbacks.py  7_function_calling.py  Agents_app.py  LLM_app.py  README.md  check_gpu.py  encoder.py  pyproject.toml  utils.py
Embeddings/: embeddings.py  embeddings_image_bind.py  embeddings_vertexai.py  vae.py
GeminiAPI/: context.py  function_calling.py  multimodality.py  reasoning_engine.py  standalone.py
LLM-Apps/: LLM_app.py  RAG_app.py  RAG_multimodal_app.py
LLMs/: LLM_app.py  RAG_app.py
ML-Foundations/: deep-learning.ipynb  embedding-space.ipynb  features-space.ipynb  ml.ipynb
