[tool.poetry]
name = "gemini-workshop"
version = "0.1.0"
description = ""
authors = ["haruiz <henryruiz22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-api-python-client = "^2.123.0"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
rich = "^13.7.1"
jupyter = "^1.0.0"
google-generativeai = "^0.5.2"
alive-progress = "^3.1.5"
diskcache = "^5.6.3"
validators = "^0.28.1"
langchain = "^0.1.16"
chromadb = "^0.4.24"
langchain-google-genai = "^1.0.2"
faiss-cpu = "^1.8.0"
python-docx = "^1.1.0"
langchain-community = "^0.0.34"
unstructured = "^0.13.3"
langchain-google-vertexai = "^1.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
umap-learn = "^0.5.6"
scipy = "^1.13.0"
tensorflow-metal = "^1.1.0"
notebook = "^7.1.3"
tensorflow-datasets = "^4.9.4"
librosa = "^0.10.1"
dlib = "^19.24.4"
imutils = "^0.5.4"
numpy = "^1.26.4"
gradio = "^4.27.0"
pydantic = "^2.7.1"
tensorflow = "^2.16.1"
google-cloud-aiplatform = {extras = ["reasoningengine"], version = "^1.48.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
